<?xml version="1.0"?>
<package format="2">
  <name>simple_msgs</name>
  <version>0.0.0</version>
  <description>The simple_msgs package</description>
  <maintainer email="yuzaki-sota383@g.ecc.u-tokyo.ac.jp">Sota Yuzaki</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>